gts-macros/tests/compile_fail/version_mismatch_major.stderr
error: struct_to_gts_schema: Version mismatch between struct name and schema_id. Struct 'BaseEventV2' has version suffix 'V2' but schema_id 'gts.x.core.events.type.v1~' has version 'v1'. The versions must match exactly (e.g., BaseEventV1 with v1~, or BaseEventV2_0 with v2.0~)
  --> tests/compile_fail/version_mismatch_major.rs:13:12
   |
13 | pub struct BaseEventV2 {
   |            ^^^^^^^^^^^
